appId: dev.purama.vidalangue
name: Missions list
---
- launchApp
- tapOn: "Missions"
- assertVisible: "Missions"
- assertVisible: "Apprends en aidant"
